[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/city.png" type="Texture" id=1]
[ext_resource path="res://scripts/city_obj.gd" type="Script" id=2]
[ext_resource path="res://scripts/city_area2d.gd" type="Script" id=3]
[ext_resource path="res://fonts/prstartk.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 4 )

[node name="city_obj" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="city_area2d" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="collider_area" type="CollisionShape2D" parent="city_area2d"]
shape = SubResource( 3 )

[node name="city_label" type="Label" parent="."]
margin_left = -8.0
margin_top = -18.0
margin_right = 66.0
margin_bottom = -9.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="city_area2d" to="." method="_on_city_area2d_mouse_entered"]
[connection signal="mouse_exited" from="city_area2d" to="." method="_on_city_area2d_mouse_exited"]
